@@ -1,3 +1,9 @@
+Sat May 22 22:31:36 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv.rb: fix [ruby-core:28320] reported by Paul Clegg.
+	  (Resolv::DNS::Requester#request): raise ResolvTimeout consistently
+	  for timeout.
+
 Sat May 22 22:14:11 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/readline/readline.c (Init_readline): initialize
